--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         if (hours < 10) {
           hours = "0" + hours;
         }
+        if (hours > 12) {
+            hours -= 12;
+        }
         if (minutes < 10) {
           minutes = "0" + minutes;
         }
