fix info box not opening on first click
we are querying inline style, not that which is computed by css 😅

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       var infoDiv = document.getElementById("info-div");
 
       infoIcon.addEventListener("click", function() {
-        if (infoDiv.style.display === "none") {
+        if (infoDiv.style.display != "block") {
           infoDiv.style.display = "block";
         } else {
           infoDiv.style.display = "none";
